[gd_scene load_steps=4 format=3 uid="uid://wct82kvwjcio"]

[ext_resource type="Script" path="res://MenuOptions.gd" id="1_skys7"]
[ext_resource type="PackedScene" uid="uid://der7c3vl4w7qh" path="res://gameplay.tscn" id="2_38jke"]
[ext_resource type="PackedScene" uid="uid://rxdgdijyhrsb" path="res://settings.tscn" id="2_wvudt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.5
offset_top = 93.0
offset_right = 65.5
offset_bottom = 135.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "MY GAME"
horizontal_alignment = 1

[node name="Credit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 156.0
offset_right = 59.5
offset_bottom = 182.0
grow_horizontal = 2
text = "A game by YOU"

[node name="MenuOptions" type="VFlowContainer" parent="." node_paths=PackedStringArray("shortcut_context")]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = 192.0
offset_right = 36.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
shortcut_context = NodePath("Start")
alignment = 1
script = ExtResource("1_skys7")
gameplay_scene = ExtResource("2_38jke")
settings_scene = ExtResource("2_wvudt")

[node name="Start" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MenuOptions/Start" to="MenuOptions" method="_on_start_pressed"]
[connection signal="pressed" from="MenuOptions/Settings" to="MenuOptions" method="_on_settings_pressed"]
[connection signal="pressed" from="MenuOptions/Quit" to="MenuOptions" method="_on_quit_pressed"]
